# cryptop

./: .gitignore  Cargo.toml  README.md  config.yaml
ideas/layout/: layout_1.drawio
src/: config.rs  main.rs  market.rs
