[package]
name = "cryptop"
version = "0.1.0"
authors = ["eggmund <joshuacolclough2@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tui = "0.9.1"
binance = "0.10.2"
yaml-rust = "0.4.3"
tui = "0.9.1"
log = "0.4"
simplelog = "0.7"